k8s/4_success-eks-admin-front-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  namespace: test-0923
  name: ingress-controller
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:017820660901:certificate/a3897ab5-776e-4173-bf00-e9c87966222c
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: blog.ghtjr.com 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blog-front-service
              port:
                number: 80
    - host: admin.ghtjr.com 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: admin-front-service
              port:
                number: 80
    - host: keycloak.ghtjr.com  # Keycloak에 대한 도메인 추가
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak-service  # Keycloak 서비스로 트래픽을 전달
              port:
                number: 8080  # Keycloak 서비스 포트
